test/files/invalid/array_sizes.stderr
error: size cannot be negative
  ┌─ test/files/invalid/array_sizes.fbs:2:13
  │
2 │   x: [bool: -1];
  │             ^^

error: size is too large
  ┌─ test/files/invalid/array_sizes.fbs:3:13
  │
3 │   y: [bool: 99999999999999999];
  │             ^^^^^^^^^^^^^^^^^

error: Arrays are not currently supported in planus
  ┌─ test/files/invalid/array_sizes.fbs:2:6
  │
2 │   x: [bool: -1];
  │      ^^^^^^^^^^

error: Arrays are not currently supported in planus
  ┌─ test/files/invalid/array_sizes.fbs:3:6
  │
3 │   y: [bool: 99999999999999999];
  │      ^^^^^^^^^^^^^^^^^^^^^^^^^

